--- a/.ebextensions/static-files.config
+++ b/.ebextensions/static-files.config
@@ -1,2 +1,7 @@
 option_settings:
-aws:elasticbeanstalk:container:python:WSGIPath:application:app
+  aws:elasticbeanstalk:container:nodejs:
+    NodeCommand: "npm start"
+ 
+  aws:elasticbeanstalk:environment:proxy:
+    StaticFiles:
+      "/": "public"
